<resources>
    <string name="app_name">Self-Enrichment App</string>
    <string name="title_goals">Goals Tracker</string>
    <string name="title_lessons">Lessons Learnt</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_health">Health &amp; Fitness</string>
    <string name="title_mood">Mood Diary</string>
    <string name="btm_nav_title_goals">Goals</string>
    <string name="btm_nav_title_lessons">Lessons</string>
    <string name="btm_nav_title_dashboard">Dashboard</string>
    <string name="btm_nav_title_health">Health</string>
    <string name="btm_nav_title_mood">Mood</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_us">About Us</string>
    <string name="tracker_name">IKIGAI - SELF ENRICHMENT TRACKER</string>
    <string name="app_descr">Daily Self Care Mood and Health Tracker</string>
    <string name="version">Version 0.01</string>
    <string name="group_name">BIL GateS</string>
    <string name="team">Team Members</string>
    <string name="name">Brandon Tan Zhirong 17129754/1 Ong Teng Kheng 17085890/1 Goy Shuh Xian 17130134/1 Chew Swee Keat 17163389/1 Low Yi Fan 17110940/1</string>

    <string name="contact_us">Contact Us</string>
    <string name="phone_number">(+60) 17 511 8288</string>
    <string name="email_address">wid180035@gmail.com</string>
    <string name="question">Questions? Need help? Report a bug? Just contact us through the phone number or e-mail address above. We will get back to you shortly. Thanks.</string>

    <string name="review_app">Review App</string>
    <string name="app_rating">App Rating</string>
    <string name="description">Description</string>
    <string name="edit_description">Write your review here</string>

    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="old_password_number">wid180035</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>

    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="security">Security</string>
    <string name="account_id">Account ID</string>
    <string name="account">Account</string>
    <string name="account_id_number">17085890</string>
    <string name="account_number">wid180035@siswa.um.edu.my</string>
    <string name="push_notification">Push Notification</string>
    <string name="goals">Goals</string>
    <string name="lesson_learnt">Lesson Learnt</string>
    <string name="health">Health</string>
    <string name="mood">Mood</string>

    <string name="forget_password">Forget Password</string>
    <string name="forget_password_desc">Please send an email to wid180035@gmail.com to request for change password.</string>
    <string name="done">Done</string>

    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="birthday">Birthday</string>
    <string name="email">E-mail Address</string>
    <string name="password">Password</string>
    <string name="term_and_condition">I have read and agree to the Privacy Policy</string>

    <string name="login">Login</string>
    <string name="or">Or Continue With</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="register_using_email">Register using email</string>

    <string name="edit_profile">Edit Profile</string>
    <string name="birthday_year">Year</string>
    <string name="birthday_month">Month</string>
    <string name="birthday_day">Day</string>

    <string name="steven">Steven Ong</string>
    <string name="hi_there">Hi There</string>
    <string name="logout">Logout</string>
    <string name="app_version">App Version 0.0.1</string>
    <string name="mood_diary_add_entry">Add Entry</string>
    <string name="mood_diary_date">Date</string>
    <string name="mood_diary_default_date">01 Jan 2022</string>
    <string name="mood_diary_edit_entry">Edit Entry</string>
</resources>