<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/destGoals"
        android:icon="@drawable/ic_goals"
        android:title="@string/btm_nav_title_goals" />
    <item
        android:id="@+id/destLessons"
        android:icon="@drawable/ic_lessons"
        android:title="@string/btm_nav_title_lessons" />
    <item
        android:id="@+id/destDashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/btm_nav_title_dashboard" />
    <item
        android:id="@+id/destHealth"
        android:icon="@drawable/ic_health"
        android:title="@string/btm_nav_title_health" />

    <item
        android:id="@+id/destMood"
        android:icon="@drawable/ic_mood"
        android:title="@string/btm_nav_title_mood" />

</menu>