<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/destDashboard">

    <fragment
        android:id="@+id/destLessons"
        android:name="com.example.self_enrichment_app.view.lessons.LessonsLearntFragment"
        android:label="@string/title_lessons"
        tools:layout="@layout/fragment_lessonslearnt" />
    <fragment
        android:id="@+id/destDashboard"
        android:name="com.example.self_enrichment_app.view.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/destGoals"
        android:name="com.example.self_enrichment_app.view.goals.GoalsFragment"
        android:label="@string/title_goals"
        tools:layout="@layout/fragment_goals">
        <argument
        android:name="edit"
        app:argType="boolean"
        android:defaultValue="false"/>
        <action
            android:id="@+id/action_destGoals_self"
            app:destination="@id/destGoals"
            app:popUpTo="@id/destGoals" />
        <action
            android:id="@+id/action_destGoals_to_destGoalsMilestoneFragment"
            app:destination="@id/destGoalsMilestoneFragment" />
    </fragment>
    <fragment
        android:id="@+id/destHealth"
        android:name="com.example.self_enrichment_app.view.health.HealthFragment"
        android:label="@string/title_health"
        tools:layout="@layout/fragment_health" />
    <fragment
        android:id="@+id/destMood"
        android:name="com.example.self_enrichment_app.view.mood.MoodFragment"
        android:label="@string/title_mood"
        tools:layout="@layout/fragment_mood" />
    <fragment
        android:id="@+id/destGoalsMilestoneFragment"
        android:name="com.example.self_enrichment_app.view.goals.GoalsMilestoneFragment"
        android:label="fragment_goals_milestone"
        tools:layout="@layout/fragment_goals_milestone" >
        <action
            android:id="@+id/action_destGoalsMilestoneFragment_to_destGoals"
            app:destination="@id/destGoals" />
    </fragment>

</navigation>