<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/settingsCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_close_36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/settingsDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:src="@drawable/ic_comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/settingsCloseButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settingsSecurityView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/security"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsDarkThemeSwitch" />

    <TextView
        android:id="@+id/settingsAccountView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/account"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsAccountIDView" />

    <TextView
        android:id="@+id/settingsChangePasswordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsAccountView" />

    <TextView
        android:id="@+id/settingsAccountIDView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/account_id"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsSecurityView" />

    <TextView
        android:id="@+id/settingsPushNotificationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/push_notification"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsChangePasswordView" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settingsDarkThemeSwitch"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/dark_theme"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsCloseButton" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settingsGoalsSwitch"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/goals"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsPushNotificationView" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settingsMoodSwitch"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/mood"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsHealthSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settingsHealthSwitch"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/health"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsLessonLearntSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settingsLessonLearntSwitch"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/lesson_learnt"
        android:textColor="@android:color/secondary_text_light"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsGoalsSwitch" />

    <TextView
        android:id="@+id/settingsAccountID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        android:textColor="#95A5A6"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/settingsAccountIDView"
        app:layout_constraintTop_toBottomOf="@+id/settingsDarkThemeSwitch" />

    <TextView
        android:id="@+id/settingsAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/settingsAccountView"
        app:layout_constraintTop_toBottomOf="@+id/settingsAccountID" />

    <ImageButton
        android:id="@+id/settingsChangePasswordButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_comment"
        app:layout_constraintStart_toEndOf="@+id/settingsChangePasswordView"
        app:layout_constraintTop_toBottomOf="@+id/settingsAccount"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>