<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/contactUsCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:src="?attr/actionModeCloseDrawable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/contactUsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/contact_us"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/contactUsCloseButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/contactUsPhoneIconView"
        android:layout_width="49dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactUsCloseButton" />

    <ImageView
        android:id="@+id/contactUsEmailIcon"
        android:layout_width="53dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/ic_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactUsPhoneIconView" />

    <TextView
        android:id="@+id/contactUsPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/contactUsPhoneIconView"
        app:layout_constraintTop_toBottomOf="@+id/contactUsView" />

    <TextView
        android:id="@+id/contactUsEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/email_address"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/contactUsEmailIcon"
        app:layout_constraintTop_toBottomOf="@+id/contactUsPhoneNumber" />

    <TextView
        android:id="@+id/contactUsContactUsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:text="@string/contact_us"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactUsEmailIcon" />

    <TextView
        android:id="@+id/contactUsQuestionView"
        android:layout_width="318dp"
        android:layout_height="131dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:text="@string/question"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactUsContactUsView" />
</androidx.constraintlayout.widget.ConstraintLayout>